@@ -1,9 +1,9 @@
 package co.programmers.voucher_management.voucher.service;
 
-import java.text.MessageFormat;
+import static co.programmers.voucher_management.exception.ErrorCode.*;
+
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -62,11 +62,9 @@ public class VoucherService {
 		long customerId = voucherAssignDTO.getCustomerId();
 
 		Voucher voucher = voucherRepository.findById(voucherId)
-				.orElseThrow(
-						() -> new NoSuchDataException(MessageFormat.format("No such voucher of id {0}", voucherId)));
+				.orElseThrow(() -> new NoSuchDataException(VOUCHER_NOT_FOUND));
 		Customer customer = customerRepository.findById(customerId)
-				.orElseThrow(
-						() -> new NoSuchDataException(MessageFormat.format("No such customer of id {0}", customerId)));
+				.orElseThrow(() -> new NoSuchDataException(CUSTOMER_NOT_FOUND));
 
 		voucher.assignCustomer(customerId);
 		Voucher assigned = voucherRepository.assignCustomer(voucher, customer);
@@ -75,7 +73,7 @@ public class VoucherService {
 
 	public VoucherResponseDTO findById(long id) {
 		Voucher voucher = voucherRepository.findById(id)
-				.orElseThrow(() -> new NoSuchDataException(MessageFormat.format("No such voucher of id {0}", id)));
+				.orElseThrow(() -> new NoSuchDataException(VOUCHER_NOT_FOUND));
 		return new VoucherResponseDTO(voucher);
 	}
 
@@ -83,14 +81,14 @@ public class VoucherService {
 		List<Voucher> vouchers = voucherRepository.findByType(discountType);
 		return vouchers.stream()
 				.map(VoucherResponseDTO::new)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	public List<VoucherResponseDTO> findByDate(LocalDate startDate, LocalDate endDate) {
 		List<Voucher> vouchers = voucherRepository.findByDate(startDate, endDate);
 		return vouchers.stream()
 				.map(VoucherResponseDTO::new)
-				.collect(Collectors.toList());
+				.toList();
 
 	}
 }
